# XuLang

./: .gitignore  README.md  fib.c
examples/: ast.xl  blocks.xl  calc.xl  control.xl  expression.xl  fib.xl  hello.xl  object.xl  primes.xl  try_except.xl  var.xl
src/: CMakeLists.txt  ast2json.cc  check.cc  codegen.cc  lexer.cc
src/ast/: CMakeLists.txt  ast.cc  expression.hpp  node.hpp  operator.hpp  statement.hpp  tojson.hpp  visitor.hpp
src/builtin/: CMakeLists.txt  type.cc  type.hpp
src/check/: CMakeLists.txt  check.hpp  context.cc  context.hpp  experssion.cc  statement.cc
src/codegen/: codegen.cc  codegen.hpp
src/parser/: CMakeLists.txt  lexer.hpp  parser.cc  parser.hpp  parser.y  token.l
src/utils/: CMakeLists.txt  log.cc  log.hpp  utils.hpp
