project(XuLang)
include_directories(${CMAKE_SOURCE_DIR})
execute_process(COMMAND bison -Wall -d -o ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp ${CMAKE_CURRENT_SOURCE_DIR}/parser.y)
execute_process(COMMAND flex -o ${CMAKE_CURRENT_BINARY_DIR}/tokens.cpp ${CMAKE_CURRENT_SOURCE_DIR}/token.l)
add_library(parser SHARED ${PROJECT_BINARY_DIR}/tokens.cpp ${PROJECT_BINARY_DIR}/parser.cpp)
